Fixed bug #71202 (Autoload function registered by another not activated immediately)